# ros-icreate-bbb

./: .gitignore  LICENSE.md  README.md
doc/cad/: floor1.dxf  floor2.dxf  floor3.dxf
scripts/: image_stereo.launch  install_ros.sh  install_service.sh  roomba_robot.launch  ros-cron.sh  ros-nodes-realtime.launch  ros-nodes-record.launch  ros-nodes.launch  ros.service  ros.sh  rosbag_analysis.py  sync.sh
scripts/manual_launches/: image_stereo.launch  ros_audio_script.launch  ros_bmp_script.launch  ros_camera_script.launch  ros_camera_usbcam_script.launch  ros_create_script.launch  ros_imu_baro_script.launch  ros_imu_script.launch  ros_joy_remote_script.launch  ros_joy_script.launch  ros_odometry_script.launch  ros_view_script.launch
src/action/: CMakeLists.txt  package.xml  setup.py
src/action/scripts/record/: autonomous_control.py  record.sh  record_autonomous.launch  record_control.launch  remote_control.py  replay.sh
src/action/scripts/record/data/: LanguageTagging.py  bagutils.py  convert_hdf5.py  convert_rosbag.py  create_dataset.sh  create_hdf5_dataset.sh  create_hdf5_visualization.sh  create_rosbag_cropped.sh  create_rosbag_dataset.sh  create_rosbag_logs.sh  create_rosbag_stats.sh  create_rosbag_stats_crop.sh  crop_rosbag.py  extract_rosbag.py  h5utils.py  logs_rosbag.py  sort_hdf5.py  stats_rosbag.py  sync_hdf5.py  visualize_hdf5.py
src/action/src/action/: behaviours.py  images.py  utils.py
src/audio/: CMakeLists.txt  package.xml
src/audio/msg/: AudioData.msg  AudioPacket.msg
src/audio/nodes/: capture.cpp  viewer.py
src/audio/scripts/: capture.py  capture_alsa.py  capture_cb.py  viewer.py
src/camera/: CMakeLists.txt  package.xml
src/camera/calibration/: left_calibration.yaml  ost.txt  right_calibration.yaml
src/camera/include/camera/: capturev4l2.h
src/camera/nodes/: capture.cpp  syncImage.py  viewer.cpp
src/camera/src/: capturev4l2.cpp
src/imu/: CMakeLists.txt  package.xml
src/imu/drivers/: install.sh
src/imu/drivers/bmp180/: Makefile  README.txt  bmp085.c
src/imu/drivers/l3gd20/: Makefile  README.txt  l3gd20-probe.c  l3gd20.c  l3gd20.h
src/imu/drivers/lsm303d/: Makefile  README.txt  lsm303d-probe.c  lsm303d.c  lsm303d.h
src/imu/include/imu/: L3GD20Gyro.h  LMS303.h
src/imu/msg/: ImuBatch.msg  ImuPacket.msg  MagneticFieldBatch.msg
src/imu/nodes/: capture.cpp  captureBMP.cpp  captureBMP.py  capture_acc_gyro.cpp  capture_baro.cpp  capture_mag.cpp  capture_temp.cpp  viewer.py  viewer_acc_gyro.py  viewer_mag.py  viewer_orientation.py
src/imu/scripts/: calibrate_mag.py  viewer.py
src/imu/src/: L3GD20Gyro.cpp  LMS303.cpp
src/imu_filter_madgwick/: CMakeLists.txt  package.xml
src/imu_filter_madgwick/include/imu_filter_madgwick/: imu_filter_ros.h
src/imu_filter_madgwick/src/: imu_filter_ros.cpp  imu_filter_rosbag.cpp
src/irobot_create/: CMakeLists.txt  package.xml  setup.py
src/irobot_create/include/create/: create.h
src/irobot_create/msg/: BatteryIrobot.msg  Contact.msg  IrRange.msg  MotorControl.msg  MotorRequest.msg  OdomRaw.msg  SensorPacket.msg
src/irobot_create/nodes/: driver.cpp  driver.h  odometry.cpp  odometry_rosbag.cpp  viewer_odometry.py
src/irobot_create/src/: create.cpp  data.cpp  serial_query.cpp
src/irobot_create/src/irobot/: create.py
src/irobot_create/srv/: Beep.srv
src/usb_cam/calibration/: left_calibration.yaml  right_calibration.yaml
src/usb_cam/include/usb_cam/: usb_cam.h
src/usb_cam/nodes/: usb_cam_node.cpp
src/usb_cam/src/: usb_cam.cpp
src/visualization/: CMakeLists.txt  package.xml
src/visualization/scripts/: viewer.py
tests/data/: make_dataset.sh
