<?xml version="1.0"?>
<package>
  <name>irobot_create</name>
  <version>2.1.0</version>
  <description>
    ROS driver for the iRobot iCreate.
  </description>
  <maintainer email="tjay@cs.brown.edu">Graylin Trevor Jay, Brian Thomas</maintainer>
  <maintainer email="brian@cs.brown.edu">Brian Thomas</maintainer> 
  <license>BSD</license>
  <author>Graylin Trevor Jay, Brian Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roslib</run_depend>

</package>
